Desktop view navbar styling and moved Nav to z-index of 9999 to fix issue with content covering nav during scroll

--- a/src/FAQSupportView/FAQSupportView.css
+++ b/src/FAQSupportView/FAQSupportView.css
@@ -2,6 +2,9 @@
 h1 {
     font-size: 26px;
     color: black;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .faq-list {
