--- a/src/Logo/Logo.css
+++ b/src/Logo/Logo.css
@@ -2,7 +2,7 @@
     width: 60%;
     height: auto;
     display: block;
-    margin: 25px auto;
+    margin: 70px auto 30px auto;
 } 
 
 .logo-container {
